test/resources/valid/com/boothj5/jarchexample/application/address/dao/AddressDAO.java
package com.boothj5.jarchexample.application.address.dao;

import java.util.List;

import com.boothj5.jarchexample.application.common.*;
