test/resources/invalid/com/boothj5/jarchexample/application/telephonenumber/dao/TelephoneNumberDAO.java
package com.boothj5.jarchexample.application.telephonenumber.dao;

import java.util.List;

import com.boothj5.jarchexample.application.common.*;
import com.boothj5.jarchexample.application.telephonenumber.controller.TelephoneNumberController;